--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo-icon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CRGrow CHECK</title>
+    <title>CRGrow</title>
 
     <meta name="description" content="En nuestra página vas a encontrar las mejores ofertas de productos de cultivo INDOOR">
     <meta name="keywords" content="CRGROW, CR GROW, cr grow, Cr grow, Crgrow, crgrow, cultivo, indoor, carpa, cultivo">
