--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo-icon.webp" />
+    <link rel="icon" type="image/png" href="/crgrow-logo-resized.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRGrow</title>
 
     <meta name="description" content="En nuestra página vas a encontrar las mejores ofertas de productos de cultivo INDOOR">
-    <meta name="keywords" content="CRGROW, CR GROW, cr grow, Cr grow, Crgrow, crgrow, cultivo, indoor, carpa, cultivo">
+    <meta name="keywords" content="CRGROW, CR GROW, CRGrow, CR Grow, CRgrow, CR grow, Crgrow, Cr grow, crgrow, cr grow, cultivo, indoor, carpa, lampara">
     <meta name="author" content="León Costandopulo">
     <meta property="og:title" content="CRGrow">
-    <meta property="og:description" content="¡SOLO POR HOY tenemos una oferta para vos, entrando al link de abajo tenés un descuento del...!">
-    <meta property="og:image" content=""> <!--! imagen -->
-    <meta property="og:url" content="">   <!--! URL -->
+    <meta property="og:description" content="¿Querías cultivar? Es tu día de suerte">
+    <meta property="og:image" content="/public/crgrow-logo-resized.webp"> 
+    <meta property="og:url" content="https://crgrow.netlify.app">   
     <meta name="robots" content="index, follow">
     
   </head>
