--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="León Costandopulo">
     <meta property="og:title" content="CRGrow">
     <meta property="og:description" content="¿Querías cultivar? Es tu día de suerte">
-    <meta property="og:image" content="/public/crgrow-logo-resized.webp"> 
+    <meta property="og:image" content="/crgrow-logo-resized.webp"> 
     <meta property="og:url" content="https://crgrow.netlify.app">   
     <meta name="robots" content="index, follow">
     
