--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
     <meta name="description" content="En nuestra página vas a encontrar las mejores ofertas de productos de cultivo INDOOR">
     <meta name="keywords" content="CRGROW, CR GROW, CRGrow, CR Grow, CRgrow, CR grow, Crgrow, Cr grow, crgrow, cr grow, cultivo, indoor, carpa, lampara">
     <meta name="author" content="León Costandopulo">
-    <meta property="og:title" content="CRGrow">
-    <meta property="og:description" content="¿Querías cultivar? Es tu día de suerte">
-    <meta property="og:image" content="/crgrow-logo-resized.webp"> 
-    <meta property="og:url" content="https://crgrow.netlify.app">   
-    <meta name="robots" content="index, follow">
+
+    <!-- WhatsApp, FaceBook, Slack ... -->
+    <meta property="og:title" content="CRGrow"/>
+    <meta property="og:description" content="¿Querías cultivar? ¡Es tu día de suerte!"/>
+    <meta property="og:image" content="/crgrow-logo-resized.webp"/>
+    <meta property="og:url" content="https://crgrow.netlify.app"/> 
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="CRGrow" />
+    <meta name="twitter:description" content="¿Querías cultivar? ¡Es tu día de suerte!" />
+    <meta name="twitter:image" content="/crgrow-logo-resized.webp" />
+    
+    <meta name="robots" content="index, follow"/>
     
   </head>
   <body>
